--- a/style.css
+++ b/style.css
@@ -160,8 +160,10 @@ button:hover {
 }
 
 .profile-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   min-width: 150px;
-  text-align: center;
 }
 
 .profile-left img {
